# spotify-whats-on

./: .gitignore  Cargo.toml  readme.md
src/: main.rs  spotify_api.rs
