[package]
name = "spotify-whats-on"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = { version="0.4.19", features=["max_level_off"] }
reqwest = { version = "0.11.18", features = ["blocking", "json"] }
rocket = "=0.5.0-rc.3"
rspotify = { version = "0.11.7", features = ["cli", "dotenv", "env-file"] }
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.99"
tokio = "1.28.2"
webbrowser = "0.8.10"
